@@ -151,6 +151,14 @@ element which is used to perform Entity and URI resolution</p>
       directories.  Default is <code>true</code></td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">reuseloadedstylesheet</td>
+    <td valign="top">Reuse the same transformer when transforming
+    multiple files.  If you set this to false, performance will
+    suffer, but you may work around a bug in certain Xalan-J versions.
+    Default is <code>true</code>.  <em>Since Ant 1.6</em>.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>classpath</h4>
